Fix overlapping buttons.

--- a/refinery/ui/source/styles/dashboard.less
+++ b/refinery/ui/source/styles/dashboard.less
@@ -920,7 +920,7 @@
           position: absolute;
           z-index: 1;
           display: none;
-          right: 20px;
+          right: 1.7em;
           min-width: 1.75em;
           padding: 0;
           color: @gray-light-rgba;
@@ -1034,7 +1034,7 @@
           display: flex;
           justify-content: center; /* align horizontal */
           align-items: center; /* align vertical */
-          padding: 0 0.5em;
+          padding: 0 0.25em;
           font-size: 1.2em;
           color: @gray-lighter-rgba;
           border: none;
